--- a/Rices/fuwamoco/Config/wofi/style.css
+++ b/Rices/fuwamoco/Config/wofi/style.css
@@ -1,5 +1,6 @@
 *{ /* mainly text settings here */
 	font-family: monospace;
+	border-radius: 25px;
 	font-weight: bold;
 	font-size: 20px;
 	color: #7287fd;
@@ -7,19 +8,21 @@
 
 /* Background of main window */
 #window {
-	background-color: #222423;
+	background-color: rgba(240,101,189,0.99);
+	border-radius: 50px;
 }
-
 #outer-box {
-	border: 5px solid #f065bd;
-	padding: 15px;
+	background-color: #222423;
+	padding: 12px;
+	border-radius: 40px;
 }
-/* set the colour for the search bar and selected entry */
 #entry:selected, #input {
-	background-color: #111211;
+	background-color: rgba(22,22,22,0.9);
+	border-radius: 12px;
+	outline: none;
 }
 
 /* add some spacing */
 #input, #window, #outer-box {
-	margin: 5px;
+	margin: 10px;
 }
